<resources>
    <string name="app_name">Mobile phone antenna power modulation App by XXXXWorks</string>
    <string name="home">Home</string>
    <string name="log">Log</string>
    <string name="register">Reg</string>
    <string name="script">Script</string>
    <string name="control">Control</string>
    <string name="triggers">Triggers</string>
    <string name="devicestatus">Device Status</string>
    <string name="faultstatus">Fault Status</string>
    <string name="rffestatus">RFFE Status</string>
    <string name="enable_vio">Enable VIO</string>
    <string name="enable_extended_rw">Enable Extended R/W</string>
    <string name="enable_high_reso_output">Enable High reso output</string>
    <string name="output_voltage">Output Voltage</string>
    <string name="high_output_reso">High reso.output</string>
    <string name="rffe_frequency">RFFE Frequency</string>
    <string name="rffe_frequency_value">3.0 MHz</string>
    <string name="switching_frequency">Switching Frequency</string>
    <string name="switching_frequency_value">2.5 MHz</string>
    <string name="device_addr_hex">Device Addr(Hex)</string>
    <string name="device_addr_hex_value">00</string>
    <string name="lowerpowermode">Lower Power Mode</string>
    <string name="switching_mode">Switching Mode</string>
    <string name="switching_mode_value">Automatic</string>
    <string name="bypass_pmos">Bypass PMOS</string>
    <string name="bypass_pmos_value">Automatic</string>
    <string name="power_mode">Power Mode</string>
    <string name="power_mode_value">Low power mode</string>
    <string name="set_trigger_mask0">Set trigger mask 0</string>
    <string name="set_trigger_mask1">Set trigger mask 1</string>
    <string name="set_trigger_mask2">Set trigger mask 2</string>
    <string name="set_trigger_mask3">Set trigger mask 3</string>
    <string name="auto_triggers">Automatically trigger</string>
    <string name="set_all_trigger_masks">Set all trigger masks</string>
    <string name="set_all_triggers">Set all triggers</string>
    <string name="set_trigger0">Set trigger 0</string>
    <string name="set_trigger1">Set trigger 1</string>
    <string name="set_trigger2">Set trigger 2</string>
    <string name="enable_poll_device_status_every">Enable poll device status</string>
    <string name="poll_device_status_frequency">Poll device status every</string>
    <string name="enable_check_fault_status">Check fault status</string>
    <string name="check_all_register">Check all register</string>
    <string name="poll_device_status_frequency_value">1000ms</string>
    <string name="label_empty_list">Empty List</string>
    <string name="action_save">Save</string>
    <string name="action_clear">Clear</string>
    <string name="action_delete">Delete</string>
    <string name="action_help">Help</string>
    <string name="action_data">Data</string>
    <string name="action_load">Load</string>
    <string name="logid">ID</string>
    <string name="logtime">Time</string>
    <string name="logaddressdex">Addr Hex</string>
    <string name="logdatahex">Data Hex</string>
    <string name="lognote">Note</string>
    <string name="bit7">BIT7</string>
    <string name="bit6">BIT6</string>
    <string name="bit5">BIT5</string>
    <string name="bit4">BIT4</string>
    <string name="bit3">BIT3</string>
    <string name="bit2">BIT2</string>
    <string name="bit1">BIT1</string>
    <string name="bit0">BIT0</string>

    <string name="output_valtage">Output Voltage</string>
    <string name="switch_mode_and_bypass_control">Switch Mode and Bypass Control</string>
    <string name="high_reso_output_voltage">High Resolution Output Voltage</string>
    <string name="fault_status">Fault Status</string>
    <string name="rffe_status">RFFE Status</string>
    <string name="group_id">Group ID</string>
    <string name="power_mode_and_trigger">Power Mode and Trigger</string>
    <string name="manufacturer_id">Manufacturer ID</string>
    <string name="product_id">Product ID</string>
    <string name="user_programmable_slave_id">User Programmable Slave ID</string>
    <string name="device_revision">Device Revision</string>


</resources>
